--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-haste",
-  "version": "2.9.4",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/facebook/node-haste.git"
@@ -8,25 +8,22 @@
   "license": "BSD-3-Clause",
   "main": "lib/index.js",
   "dependencies": {
-    "absolute-path": "^0.0.0",
-    "debug": "^2.2.0",
     "denodeify": "^1.2.1",
+    "fb-watchman": "^1.9.0",
     "graceful-fs": "^4.1.3",
-    "json-stable-stringify": "^1.0.1",
-    "sane": "^1.3.1",
-    "throat": "^2.0.2"
+    "node-glob": "^1.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.2",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
     "babel-eslint": "^5.0.0",
-    "babel-jest": "^9.0.3",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-jest": "^11.0.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-types": "^6.5.2",
+    "babel-types": "^6.7.2",
     "eslint": "^1.10.3",
     "fbjs-scripts": "^0.5.0",
-    "jest-cli": "^0.9.2"
+    "jest-cli": "^11.0.0"
   },
   "jest": {
     "rootDir": "./src",
